# typesense-rust

./: .gitignore  Cargo.toml  README.md  compose.yml  openapi.yml  preprocessed_openapi.yml  webdriver.json
.cargo/: config.toml
.github/: dependabot.yml
custom-templates/: model.mustache
mocks/: create_collection.yaml  drop_collection.yaml  get.yaml  get_api_key_header.yaml  import_documents.yaml  post.yaml  post_api_key.yaml  (+3 more)
src/: error.rs  (+5 more)
typesense/: .env.dist  Cargo.toml  webdriver.json
typesense/src/: collection_schema.rs  document.rs  error.rs  keys.rs  lib.rs  prelude.rs  synonym.rs
typesense/src/builders/: collection_field.rs  collection_schema.rs  mod.rs  multi_search_collection_parameters.rs  multi_search_parameters.rs  multi_search_searches_parameters.rs  search_parameters.rs
typesense/src/client/: alias.rs  aliases.rs  collections.rs  curation_sets.rs  key.rs  keys.rs  mod.rs  multi_search.rs  operations.rs  preset.rs  presets.rs  retry_policy.rs  stopword.rs  stopwords.rs  synonym_sets.rs
typesense/src/client/analytics/: events.rs  mod.rs  rule.rs  rules.rs
typesense/src/client/collection/: document.rs  documents.rs  mod.rs  search_override.rs  search_overrides.rs  synonym.rs  synonyms.rs
typesense/src/client/conversations/: mod.rs  model.rs  models.rs
typesense/src/client/curation_set/: item.rs  items.rs  mod.rs
typesense/src/client/stemming/: dictionaries.rs  dictionary.rs  mod.rs
typesense/src/client/synonym_set/: item.rs  items.rs  mod.rs
typesense/src/collection/: mod.rs  schema.rs
typesense/src/field/: field_type.rs  mod.rs
typesense/src/models/: api_key_actions.rs  document_index_parameters.rs  mod.rs  multi_search.rs  scoped_key_parameters.rs  search_result.rs
typesense/src/traits/: document.rs  field_type.rs  mod.rs  multi_search_ext.rs
typesense/src/transport/: http_low_level.rs  mod.rs
typesense/tests/: collection.rs  collection_client.rs  documents.rs
typesense/tests/api/: collection.rs  documents.rs  lib.rs
typesense/tests/client/: aliases_test.rs  analytics_test.rs  client_test.rs  collections_test.rs  conversation_models_test.rs  curation_sets_test.rs  derive_integration_test.rs  documents_test.rs  keys_test.rs  mod.rs  multi_search_test.rs  operations_test.rs  presets_test.rs  search_overrides_test.rs  stemming_dictionaries_test.rs  stopwords_test.rs  synonym_sets_test.rs  synonyms_test.rs  tls_certificate_test.rs
typesense/tests/client/http_builder_test/: http_builder_tls_test.rs  mod.rs
typesense/tests/derive/: collection.rs  compile.rs  derive_collection_schema_test.rs  lib.rs
typesense/tests/derive/ui/: duplicate_attribute.rs  duplicate_attribute.stderr  duplicate_derive_attribute.rs  duplicate_derive_attribute.stderr  duplicated_attribute.rs  duplicated_attribute.stderr  enum.rs  enum.stderr  flag_only_attribute.rs  flag_only_attribute.stderr  non_strliteral_default_field.rs  non_strliteral_default_field.stderr  unknown_attribute.rs  unknown_attribute.stderr  wrong_sorting_field.rs  wrong_sorting_field.stderr
typesense_codegen/: .openapi-generator-ignore  Cargo.toml  README.md
typesense_codegen/.openapi-generator/: FILES
typesense_codegen/docs/: AnalyticsApi.md  AnalyticsEvent.md  AnalyticsEventCreateResponse.md  AnalyticsEventCreateSchema.md  AnalyticsEventData.md  AnalyticsEventsResponse.md  AnalyticsEventsResponseEventsInner.md  AnalyticsRule.md  AnalyticsRuleCreate.md  AnalyticsRuleCreateParams.md  AnalyticsRuleDeleteResponse.md  AnalyticsRuleParameters.md  AnalyticsRuleParametersDestination.md  AnalyticsRuleParametersSource.md  AnalyticsRuleParametersSourceEventsInner.md  AnalyticsRuleSchema.md  AnalyticsRuleType.md  AnalyticsRuleUpdate.md  AnalyticsRuleUpdateParams.md  AnalyticsRuleUpsertSchema.md  AnalyticsRulesRetrieveSchema.md  AnalyticsStatus.md  ApiKey.md  ApiKeyAllOf.md  ApiKeyDeleteResponse.md  ApiKeySchema.md  ApiKeysResponse.md  ApiResponse.md  ApiStatsResponse.md  CollectionAlias.md  CollectionAliasSchema.md  CollectionAliasesResponse.md  CollectionResponse.md  CollectionResponseAllOf.md  CollectionSchema.md  CollectionUpdateSchema.md  CollectionsApi.md  ConversationModelCreateSchema.md  ConversationModelSchema.md  ConversationModelUpdateSchema.md  (+115 more)
typesense_codegen/src/: lib.rs
typesense_codegen/src/apis/: analytics_api.rs  collections_api.rs  configuration.rs  conversations_api.rs  curation_api.rs  curation_sets_api.rs  debug_api.rs  documents_api.rs  health_api.rs  keys_api.rs  mod.rs  nl_search_models_api.rs  operations_api.rs  override_api.rs  presets_api.rs  promote_api.rs  stemming_api.rs  stopwords_api.rs  synonyms_api.rs
typesense_codegen/src/models/: analytics_event.rs  analytics_event_create_response.rs  analytics_event_create_schema.rs  analytics_event_data.rs  analytics_events_response.rs  analytics_events_response_events_inner.rs  analytics_rule.rs  analytics_rule_create.rs  analytics_rule_create_params.rs  analytics_rule_delete_response.rs  analytics_rule_parameters.rs  analytics_rule_parameters_destination.rs  analytics_rule_parameters_source.rs  analytics_rule_parameters_source_events_inner.rs  analytics_rule_schema.rs  analytics_rule_type.rs  analytics_rule_update.rs  analytics_rule_update_params.rs  analytics_rule_upsert_schema.rs  analytics_rules_retrieve_schema.rs  analytics_status.rs  api_key.rs  api_key_all_of.rs  api_key_delete_response.rs  api_key_schema.rs  api_keys_response.rs  api_response.rs  api_stats_response.rs  collection_alias.rs  collection_alias_schema.rs  collection_aliases_response.rs  collection_response.rs  collection_response_all_of.rs  collection_schema.rs  collection_update_schema.rs  conversation_model_create_schema.rs  conversation_model_schema.rs  conversation_model_update_schema.rs  create_analytics_rule_200_response.rs  create_analytics_rule_200_response_one_of_inner.rs  (+98 more)
typesense_derive/: Cargo.toml
typesense_derive/src/: field_attributes.rs  field_attrs.rs  helpers.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: add_vendor_attributes.rs  main.rs  mark_borrowed_data.rs  preprocess_openapi.rs  test_clean.rs  vendor_attributes.rs
(+20 files in other folders)
