[workspace]
members = [
    "typesense",
    "typesense_derive",
    "typesense_codegen",
    "xtask",
]

resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/typesense/typesense-rust"
authors = ["Typesense  <contact@typesense.org>"]

[workspace.dependencies]
typesense_codegen = { path = "./typesense_codegen", version = "0.25" }
typesense_derive = { path = "./typesense_derive", version = "0.3" }
anyhow = "1"
base64 = "0.22"
bon = "3"
clap = { version = "4", features = ["derive"] }
debug_unsafe = "0.1"
hmac = "0.12"
reqwest-retry = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
url = "2"
web-time = "=1.1.0"
# dev dependencies
tokio = { version = "1.5", features = ["macros", "rt", "rt-multi-thread"] }

