[package]
name = "typesense"
version = "0.1.0"
authors = ["Typesense  <contact@typesense.org>"]
edition = "2021"
license = "Apache-2.0"
description = "WIP client for typesense"

[features]
default = ["derive"]
tokio_test = []

# Provide derive(Typesense) macro.
derive = ["typesense_derive"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
typesense_derive = { version = "0.1.0", path = "../typesense_derive", optional = true }
typesense_codegen = { version = "0.25.0", path = "../typesense_codegen" }
reqwest-retry = "0.7.0"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
thiserror = "1.0"
bon = "3.7.0"
strum = { version = "0.26", features = ["derive"] }


[dev-dependencies]
dotenvy = "0.15"
trybuild = "1.0.42"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.5"
nanoid = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.5", features = ["macros", "rt", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.23"

[[test]]
name = "derive_tests"
path = "tests/derive/lib.rs"
required-features = ["derive"]

[[test]]
name = "api_tests"
path = "tests/api/lib.rs"

[[test]]
name = "client"
path = "tests/client/mod.rs"