[package]
name = "typesense"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
description = "Client for typesense"

[features]
default = ["derive"]
tokio_test = []

# Provide derive(Typesense) macro.
derive = ["typesense_derive"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
typesense_derive = { workspace = true, optional = true }
typesense_codegen = { workspace = true }
thiserror = "1.0"
bon = "3.7.0"
reqwest-retry = "0.7.0"
web-time = "=1.1.0" # required for wasm32 target

# native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.4.2"}

# wasm deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
# IMPORTANT: disable default features to avoid hyper/tokio/mio
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[dev-dependencies]
dotenvy = "0.15"
trybuild = "1.0.42"
nanoid = "0.4"

# native-only dev deps
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.5", features = ["macros", "rt", "rt-multi-thread"] }
wiremock = "0.5"

# wasm test deps
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.23"
wasm-bindgen-futures = "0.4.50"

[[test]]
name = "derive_tests"
path = "tests/derive/lib.rs"
required-features = ["derive"]

[[test]]
name = "api_tests"
path = "tests/api/lib.rs"
