[package]
name = "typesense"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
description = "Client for typesense"

[features]
default = ["derive"]

# Provide derive(Typesense) macro.
derive = ["typesense_derive"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
typesense_codegen = { workspace = true }
typesense_derive = { workspace = true, optional = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bon = { workspace = true }
debug_unsafe = { workspace = true }
hmac = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
web-time = { workspace = true } # required for wasm32 target

# native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.4.2"}

# wasm deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
# IMPORTANT: disable default features to avoid hyper/tokio/mio
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[dev-dependencies]
dotenvy = "0.15"
nanoid = "0.4"
trybuild = "1.0.42"

# native-only dev deps
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.5", features = ["macros", "rt", "rt-multi-thread"] }
wiremock = "0.6"

# wasm test deps
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-test = "0.3.23"

[[test]]
name = "derive_tests"
path = "tests/derive/lib.rs"
required-features = ["derive"]

[[test]]
name = "client"
path = "tests/client/mod.rs"