[package]
name = "typesense_codegen"
version = "0.25.0"
authors = ["OpenAPI Generator team and contributors"]
description = "client for typesense generated with openapi spec"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
# used in both targets by the generator
reqwest = { version = "0.12", default-features = false, features = ["json"] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest-middleware = { version = "0.4", features = ["json"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
