[package]
name = "typesense_codegen"
version = "0.25.1"
description = "Types for typesense generated with openapi spec"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bon = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
url = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest-middleware = { version = "0.4", features = ["json"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
