[package]
name = "typesense_derive"
version = "0.1.0"
authors = ["Typesense  <contact@typesense.org>"]
edition = "2018"
description = "macros for typesense client"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
