[package]
name = "typesense_derive"
version.workspace = true
description = "macros for typesense client"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
