[package]
name = "xtask"
publish = false
version = "0.0.0"
edition.workspace = true

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] } # "blocking" is simpler for scripts
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
