[package]
name = "xtask"
publish = false
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] } # "blocking" is simpler for scripts
serde = { workspace = true }
serde_yaml = { workspace = true }
typesense = { path = "../typesense"}
tokio = { workspace = true}
